Update on Overleaf.

--- a/tex/fellow.tex
+++ b/tex/fellow.tex
@@ -1,4 +1,4 @@
-% !TEX root = tex/main.tex
+% !TEX root = ./main.tex
 
 My thesis on \textbf{computational intelligence (CI)} was seminal to my current research on \textbf{data science (DS)}, \textbf{artificial intelligence~(AI)}, and their impact on \textbf{socially relevant problems}. Concerning DS, I supervise applied research projects with both the public and private sectors. Partners include the Brazilian Judicial Branch and Ministry of Education, as well as regional, national, and multi-national companies in fields as diverse as retail, telecommunications, and energy. Regarding AI, I supervise graduate students on theses involving deep and automated machine learning, as well as the intersection of multi-objective optimization with other CI domains, such as multi-dimensional visualization and dynamic optimization. Finally, regarding socially relevant problems, I have assisted in the fight against the COVID-19 pandemic through science publication and communication, in attempt to counter the intensive disinformation campaign held in Brazil. 
 
