--- a/tex/main.tex
+++ b/tex/main.tex
@@ -66,7 +66,7 @@
 \vspace{-1.cm}
 
 \newcommand{\research}{}
-\newcommand{\teaching}{}
+% \newcommand{\teaching}{}
 
 \ifdefined\research
   \ifdefined\teaching
