[data] NotBez2025ijlit.bib: changed label

--- a/data/journals/NotBez2024ijlit.bib
+++ b/data/journals/NotBez2024ijlit.bib
@@ -1,4 +1,4 @@
-@article{LaDBez2024can,
+@article{NotBez2024can,
   title={Can there be responsible {AI} without {AI} liability? Incentivizing generative {AI} safety through ex-post tort liability under the EU AI liability directive},
   author={Noto La Diega, Guido and Bezerra, Leonardo~C.~T.},
   journal={International Journal of Law and Information Technology},
